@@ -6,6 +6,9 @@ Version X.X (XXXX-XX-XX)
      New: Added an interpreter for null-terminated strings.
      New: Added interpreters for strings with unknown encoding (binary strings.)
 
+   Fixed: Adding a group annotation which contained further leaf annotations which should have overlapped
+          were treated as not overlapping, so it was possible to end up with overlapping annotations.
+
 Version 0.6 (2014-06-24)
 
      New: Added a method to set the preferred visible row count so that you can make the viewer default
